BuildUtilities/c4p/gram.output
Terminals unused in grammar

   IN
   NIL
   SET
   WITH
   PASCAL_KEYWORD
   TYPE_IDENTIFIER
   FIELD_IDENTIFIER
   C_RESERVED
   CONSTANT_IDENTIFIER
   FUNCTION_IDENTIFIER
   PROCEDURE_IDENTIFIER
   UNDEFINED_IDENTIFIER
   VARIABLE_IDENTIFIER
   PARAMETER_IDENTIFIER
   BUILD_IN_IDENTIFIER


State 385 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_heading ';' program_block '.'

    2 $@1: %empty

    3 program_heading: PROGRAM IDENTIFIER $@1 optional_program_parameters

    4 optional_program_parameters: %empty
    5                            | '(' program_parameter_list ')'

    6 $@2: %empty

    7 $@3: %empty

    8 $@4: %empty

    9 $@5: %empty

   10 $@6: %empty

   11 program_block: $@2 label_declaration_part $@3 constant_definition_part $@4 type_definition_part variable_declaration_part $@5 procedure_and_function_declaration_part $@6 statement_part

   12 program_parameter_list: program_parameter
   13                       | program_parameter_list ',' program_parameter

   14 program_parameter: IDENTIFIER

   15 procedure_and_function_declaration_part: %empty
   16                                        | procedure_and_function_declarations

   17 procedure_and_function_declarations: procedure_or_function_declaration
   18                                    | procedure_and_function_declarations procedure_or_function_declaration

   19 procedure_or_function_declaration: procedure_declaration
   20                                  | function_declaration

   21 function_declaration: function_head ';' FORWARD ';'

   22 $@7: %empty

   23 $@8: %empty

   24 function_declaration: function_head ';' $@7 label_declaration_part constant_definition_part type_definition_part variable_declaration_part BEGIn $@8 statement_sequence END ';'

   25 function_head: FUNCTION IDENTIFIER
   26              | FUNCTION IDENTIFIER optional_formal_parameter_section_list ':' IDENTIFIER

   27 optional_formal_parameter_section_list: %empty

   28 $@9: %empty

   29 optional_formal_parameter_section_list: '(' $@9 formal_parameter_section_list ')'

   30 procedure_declaration: procedure_head ';' FORWARD ';'

   31 $@10: %empty

   32 $@11: %empty

   33 procedure_declaration: procedure_head ';' $@10 label_declaration_part constant_definition_part type_definition_part variable_declaration_part BEGIn $@11 statement_sequence END ';'

   34 procedure_head: PROCEDURE IDENTIFIER optional_formal_parameter_section_list

   35 formal_parameter_section_list: formal_parameter_section

   36 @12: %empty

   37 formal_parameter_section_list: formal_parameter_section_list ';' @12 formal_parameter_section

   38 $@13: %empty

   39 formal_parameter_section: $@13 parameter_group

   40 $@14: %empty

   41 formal_parameter_section: VAR $@14 parameter_group

   42 parameter_group: parameter_declarator_list ':' IDENTIFIER

   43 parameter_declarator_list: parameter_declarator

   44 @15: %empty

   45 parameter_declarator_list: parameter_declarator_list ',' @15 parameter_declarator

   46 parameter_declarator: IDENTIFIER

   47 label_declaration_part: %empty
   48                       | LABEL label_list ';'

   49 label_list: UNSIGNED_NUMBER
   50           | label_list ',' UNSIGNED_NUMBER

   51 constant_definition_part: %empty
   52                         | CONST constant_definitions

   53 constant_definitions: constant_definition
   54                     | constant_definitions constant_definition

   55 $@16: %empty

   56 constant_definition: IDENTIFIER '=' $@16 constant ';'

   57 constant: REAL_CONSTANT
   58         | '+' REAL_CONSTANT
   59         | '-' REAL_CONSTANT
   60         | LONG_REAL_CONSTANT
   61         | '+' LONG_REAL_CONSTANT
   62         | '-' LONG_REAL_CONSTANT
   63         | UNSIGNED_NUMBER
   64         | '+' UNSIGNED_NUMBER
   65         | '-' UNSIGNED_NUMBER
   66         | IDENTIFIER
   67         | '+' IDENTIFIER
   68         | '-' IDENTIFIER
   69         | CHARACTER_STRING
   70         | CHARACTER_CONSTANT

   71 bound: UNSIGNED_NUMBER
   72      | '+' UNSIGNED_NUMBER
   73      | '-' UNSIGNED_NUMBER
   74      | IDENTIFIER
   75      | '+' IDENTIFIER
   76      | '-' IDENTIFIER
   77      | CHARACTER_CONSTANT

   78 type_definition_part: %empty
   79                     | TYPE type_definitions

   80 type_definitions: type_definition
   81                 | type_definitions type_definition

   82 $@17: %empty

   83 type_definition: IDENTIFIER '=' $@17 type_denoter ';'

   84 type_denoter: IDENTIFIER
   85             | type

   86 type: ordinal_type
   87     | structured_type
   88     | pointer_type

   89 ordinal_type: subrange_type

   90 subrange_type: bound DOTDOT bound

   91 structured_type: unpacked_structured_type
   92                | PACKED unpacked_structured_type

   93 unpacked_structured_type: array_type
   94                         | record_type
   95                         | file_type

   96 file_type: FILe OF component_type

   97 @18: %empty

   98 array_type: ARRAY '[' index_type_list ']' OF @18 component_type

   99 pointer_type: '^' component_type

  100 component_type: type_denoter

  101 index_type_list: index_type

  102 @19: %empty

  103 index_type_list: index_type_list ',' @19 index_type

  104 index_type: bound DOTDOT bound
  105           | IDENTIFIER

  106 record_type: RECORD field_list END

  107 field_list: fixed_part variant_part

  108 fixed_part: record_section_list

  109 record_section_list: record_section

  110 @20: %empty

  111 record_section_list: record_section_list ';' @20 record_section

  112 record_section: %empty
  113               | field_declarator_list ':' type_denoter

  114 field_declarator_list: field_declarator

  115 @21: %empty

  116 field_declarator_list: field_declarator_list ',' @21 field_declarator

  117 field_declarator: IDENTIFIER

  118 variant_part: %empty
  119             | CASE variant_selector OF variant_list

  120 variant_selector: tag_type

  121 tag_type: IDENTIFIER

  122 variant_list: variant

  123 @22: %empty

  124 variant_list: variant_list ';' @22 variant

  125 variant: %empty

  126 $@23: %empty

  127 $@24: %empty

  128 variant: $@23 case_constant_list ':' '(' $@24 variant_field_list ')'

  129 variant_field_list: fixed_part variant_part

  130 variable_declaration_part: %empty
  131                          | VAR variable_declarations

  132 variable_declarations: variable_declaration
  133                      | variable_declarations variable_declaration

  134 variable_declaration: variable_declarator_list ':' type_denoter ';'

  135 variable_declarator_list: variable_declarator

  136 @25: %empty

  137 variable_declarator_list: variable_declarator_list ',' @25 variable_declarator

  138 variable_declarator: IDENTIFIER

  139 statement_part: compound_statement

  140 $@26: %empty

  141 compound_statement: BEGIn $@26 statement_sequence END

  142 statement_sequence: statement
  143                   | statement_sequence ';' statement

  144 $@27: %empty

  145 statement: optional_label $@27 simple_statement
  146          | optional_label structured_statement

  147 optional_label: %empty
  148               | label

  149 label: UNSIGNED_NUMBER ':'

  150 simple_statement: %empty
  151                 | assignment_statement
  152                 | procedure_statement
  153                 | goto_statement

  154 $@28: %empty

  155 procedure_statement: READ $@28 read_parameter_list

  156 $@29: %empty

  157 procedure_statement: READLN $@29 readln_parameter_list

  158 $@30: %empty

  159 procedure_statement: WRITE $@30 write_parameter_list

  160 $@31: %empty

  161 procedure_statement: WRITELN $@31 writeln_parameter_list

  162 $@32: %empty

  163 procedure_statement: IDENTIFIER $@32 optional_actual_parameter_list

  164 readln_parameter_list: %empty
  165                      | read_parameter_list

  166 $@33: %empty

  167 read_parameter_list: '(' $@33 read_parameter_list1 ')'

  168 read_parameter_list1: read_parameter

  169 $@34: %empty

  170 read_parameter_list1: read_parameter_list1 ',' $@34 read_parameter

  171 read_parameter: variable_access

  172 writeln_parameter_list: %empty
  173                       | write_parameter_list

  174 $@35: %empty

  175 write_parameter_list: '(' $@35 write_parameter_list1 ')'

  176 write_parameter_list1: write_expression

  177 $@36: %empty

  178 write_parameter_list1: write_parameter_list1 ',' $@36 write_expression

  179 write_expression: expression

  180 $@37: %empty

  181 write_expression: expression ':' $@37 output_width

  182 output_width: expression

  183 $@38: %empty

  184 output_width: expression ':' $@38 expression

  185 structured_statement: compound_statement
  186                     | conditional_statement
  187                     | repetitive_statement

  188 conditional_statement: if_statement
  189                      | case_statement

  190 $@39: %empty

  191 $@40: %empty

  192 if_statement: IF $@39 boolean_expression THEN $@40 statement else_part

  193 else_part: %empty

  194 $@41: %empty

  195 else_part: ELSE $@41 statement

  196 $@42: %empty

  197 $@43: %empty

  198 case_statement: CASE $@42 case_index OF $@43 case_list_element_sequence optional_semicolon END

  199 optional_semicolon: %empty
  200                   | ';'

  201 case_index: expression

  202 case_list_element_sequence: case_list_element
  203                           | case_list_element_sequence ';' case_list_element

  204 $@44: %empty

  205 case_list_element: case_constant_list ':' $@44 statement

  206 case_constant_list: case_constant
  207                   | case_constant_list ',' case_constant

  208 $@45: %empty

  209 case_constant: $@45 constant
  210              | OTHERS

  211 repetitive_statement: repeat_statement
  212                     | while_statement
  213                     | for_statement

  214 $@46: %empty

  215 $@47: %empty

  216 while_statement: WHILE $@46 expression DO $@47 statement

  217 $@48: %empty

  218 $@49: %empty

  219 repeat_statement: REPEAT $@48 statement_sequence UNTIL $@49 expression

  220 $@50: %empty

  221 $@51: %empty

  222 $@52: %empty

  223 for_statement: FOR IDENTIFIER ASSIGN $@50 initial_value to_or_downto $@51 final_value DO $@52 statement

  224 initial_value: expression

  225 final_value: expression

  226 to_or_downto: TO
  227             | DOWNTO

  228 $@53: %empty

  229 $@54: %empty

  230 assignment_statement: variable_access $@53 assign $@54 expression

  231 goto_statement: GOTO UNSIGNED_NUMBER

  232 assign: ASSIGN

  233 variable_access: entire_variable
  234                | component_variable
  235                | buffer_variable

  236 buffer_variable: variable_access '^'

  237 entire_variable: variable_identifier

  238 variable_identifier: IDENTIFIER

  239 component_variable: indexed_variable
  240                   | field_designator

  241 @55: %empty

  242 indexed_variable: array_variable '[' @55 index_expression_list ']'

  243 array_variable: variable_access

  244 field_designator: record_variable '.' IDENTIFIER

  245 record_variable: variable_access

  246 index_expression_list: expression

  247 $@56: %empty

  248 index_expression_list: index_expression_list ',' $@56 expression

  249 expression: simple_expression

  250 @57: %empty

  251 expression: expression relational_operator @57 simple_expression

  252 boolean_expression: expression

  253 relational_operator: '<'
  254                    | '>'
  255                    | LEQ
  256                    | GEQ
  257                    | '='
  258                    | NEQ

  259 simple_expression: term

  260 $@58: %empty

  261 simple_expression: '-' $@58 term
  262                  | '+' term

  263 @59: %empty

  264 simple_expression: simple_expression adding_operator @59 term

  265 $@60: %empty

  266 simple_expression: simple_expression OR $@60 term

  267 adding_operator: '-'
  268                | '+'

  269 term: factor

  270 $@61: %empty

  271 term: term '/' $@61 factor

  272 @62: %empty

  273 term: term multiplying_operator @62 factor

  274 $@63: %empty

  275 term: term AND $@63 factor

  276 multiplying_operator: '*'
  277                     | DIV
  278                     | MOD

  279 factor: UNSIGNED_NUMBER
  280       | REAL_CONSTANT
  281       | LONG_REAL_CONSTANT
  282       | CHARACTER_STRING
  283       | CHARACTER_CONSTANT
  284       | variable_access

  285 $@64: %empty

  286 factor: IDENTIFIER '(' $@64 actual_parameter_list ')'

  287 $@65: %empty

  288 factor: '(' $@65 expression ')'

  289 $@66: %empty

  290 factor: NOT $@66 factor

  291 optional_actual_parameter_list: %empty
  292                               | '(' actual_parameter_list ')'

  293 actual_parameter_list: actual_parameter

  294 $@67: %empty

  295 actual_parameter_list: actual_parameter_list ',' $@67 actual_parameter

  296 actual_parameter: expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 5 29 128 167 175 286 288 292
')' (41) 5 29 128 167 175 286 288 292
'*' (42) 276
'+' (43) 58 61 64 67 72 75 262 268
',' (44) 13 45 50 103 116 137 170 178 207 248 295
'-' (45) 59 62 65 68 73 76 261 267
'.' (46) 1 244
'/' (47) 271
':' (58) 26 42 113 128 134 149 181 184 205
';' (59) 1 21 24 30 33 37 48 56 83 111 124 134 143 200 203
'<' (60) 253
'=' (61) 56 83 257
'>' (62) 254
'[' (91) 98 242
']' (93) 98 242
'^' (94) 99 236
error (256)
AND (258) 275
ARRAY (259) 98
BEGIn (260) 24 33 141
CASE (261) 119 198
CONST (262) 52
DIV (263) 277
DO (264) 216 223
DOWNTO (265) 227
ELSE (266) 195
END (267) 24 33 106 141 198
FILe (268) 96
FOR (269) 223
FORWARD (270) 21 30
FUNCTION (271) 25 26
GOTO (272) 231
IF (273) 192
IN (274)
LABEL (275) 48
MOD (276) 278
NIL (277)
NOT (278) 290
OF (279) 96 98 119 198
OR (280) 266
PACKED (281) 92
PROCEDURE (282) 34
PROGRAM (283) 3
RECORD (284) 106
REPEAT (285) 219
SET (286)
THEN (287) 192
TO (288) 226
TYPE (289) 79
UNTIL (290) 219
VAR (291) 41 131
WHILE (292) 216
WITH (293)
OTHERS (294) 210
DOTDOT (295) 90 104
NEQ (296) 258
GEQ (297) 256
LEQ (298) 255
ASSIGN (299) 223 232
PASCAL_KEYWORD (300)
TYPE_IDENTIFIER (301)
FIELD_IDENTIFIER (302)
C_RESERVED (303)
CONSTANT_IDENTIFIER (304)
FUNCTION_IDENTIFIER (305)
PROCEDURE_IDENTIFIER (306)
UNDEFINED_IDENTIFIER (307)
VARIABLE_IDENTIFIER (308)
PARAMETER_IDENTIFIER (309)
READ (310) 155
READLN (311) 157
WRITE (312) 159
WRITELN (313) 161
BUILD_IN_IDENTIFIER (314)
CHARACTER_STRING (315) 69 282
CHARACTER_CONSTANT (316) 70 77 283
UNSIGNED_NUMBER (317) 49 50 63 64 65 71 72 73 149 231 279
REAL_CONSTANT (318) 57 58 59 280
LONG_REAL_CONSTANT (319) 60 61 62 281
IDENTIFIER (320) 3 14 25 26 34 42 46 56 66 67 68 74 75 76 83 84 105
    117 121 138 163 223 238 244 286


Nonterminals, with rules where they appear

$accept (82)
    on left: 0
program (83)
    on left: 1, on right: 0
program_heading (84)
    on left: 3, on right: 1
$@1 (85)
    on left: 2, on right: 3
optional_program_parameters (86)
    on left: 4 5, on right: 3
program_block (87)
    on left: 11, on right: 1
$@2 (88)
    on left: 6, on right: 11
$@3 (89)
    on left: 7, on right: 11
$@4 (90)
    on left: 8, on right: 11
$@5 (91)
    on left: 9, on right: 11
$@6 (92)
    on left: 10, on right: 11
program_parameter_list (93)
    on left: 12 13, on right: 5 13
program_parameter (94)
    on left: 14, on right: 12 13
procedure_and_function_declaration_part (95)
    on left: 15 16, on right: 11
procedure_and_function_declarations (96)
    on left: 17 18, on right: 16 18
procedure_or_function_declaration (97)
    on left: 19 20, on right: 17 18
function_declaration (98)
    on left: 21 24, on right: 20
$@7 (99)
    on left: 22, on right: 24
$@8 (100)
    on left: 23, on right: 24
function_head (101)
    on left: 25 26, on right: 21 24
optional_formal_parameter_section_list (102)
    on left: 27 29, on right: 26 34
$@9 (103)
    on left: 28, on right: 29
procedure_declaration (104)
    on left: 30 33, on right: 19
$@10 (105)
    on left: 31, on right: 33
$@11 (106)
    on left: 32, on right: 33
procedure_head (107)
    on left: 34, on right: 30 33
formal_parameter_section_list (108)
    on left: 35 37, on right: 29 37
@12 (109)
    on left: 36, on right: 37
formal_parameter_section (110)
    on left: 39 41, on right: 35 37
$@13 (111)
    on left: 38, on right: 39
$@14 (112)
    on left: 40, on right: 41
parameter_group (113)
    on left: 42, on right: 39 41
parameter_declarator_list (114)
    on left: 43 45, on right: 42 45
@15 (115)
    on left: 44, on right: 45
parameter_declarator (116)
    on left: 46, on right: 43 45
label_declaration_part (117)
    on left: 47 48, on right: 11 24 33
label_list (118)
    on left: 49 50, on right: 48 50
constant_definition_part (119)
    on left: 51 52, on right: 11 24 33
constant_definitions (120)
    on left: 53 54, on right: 52 54
constant_definition (121)
    on left: 56, on right: 53 54
$@16 (122)
    on left: 55, on right: 56
constant (123)
    on left: 57 58 59 60 61 62 63 64 65 66 67 68 69 70, on right: 56
    209
bound (124)
    on left: 71 72 73 74 75 76 77, on right: 90 104
type_definition_part (125)
    on left: 78 79, on right: 11 24 33
type_definitions (126)
    on left: 80 81, on right: 79 81
type_definition (127)
    on left: 83, on right: 80 81
$@17 (128)
    on left: 82, on right: 83
type_denoter (129)
    on left: 84 85, on right: 83 100 113 134
type (130)
    on left: 86 87 88, on right: 85
ordinal_type (131)
    on left: 89, on right: 86
subrange_type (132)
    on left: 90, on right: 89
structured_type (133)
    on left: 91 92, on right: 87
unpacked_structured_type (134)
    on left: 93 94 95, on right: 91 92
file_type (135)
    on left: 96, on right: 95
array_type (136)
    on left: 98, on right: 93
@18 (137)
    on left: 97, on right: 98
pointer_type (138)
    on left: 99, on right: 88
component_type (139)
    on left: 100, on right: 96 98 99
index_type_list (140)
    on left: 101 103, on right: 98 103
@19 (141)
    on left: 102, on right: 103
index_type (142)
    on left: 104 105, on right: 101 103
record_type (143)
    on left: 106, on right: 94
field_list (144)
    on left: 107, on right: 106
fixed_part (145)
    on left: 108, on right: 107 129
record_section_list (146)
    on left: 109 111, on right: 108 111
@20 (147)
    on left: 110, on right: 111
record_section (148)
    on left: 112 113, on right: 109 111
field_declarator_list (149)
    on left: 114 116, on right: 113 116
@21 (150)
    on left: 115, on right: 116
field_declarator (151)
    on left: 117, on right: 114 116
variant_part (152)
    on left: 118 119, on right: 107 129
variant_selector (153)
    on left: 120, on right: 119
tag_type (154)
    on left: 121, on right: 120
variant_list (155)
    on left: 122 124, on right: 119 124
@22 (156)
    on left: 123, on right: 124
variant (157)
    on left: 125 128, on right: 122 124
$@23 (158)
    on left: 126, on right: 128
$@24 (159)
    on left: 127, on right: 128
variant_field_list (160)
    on left: 129, on right: 128
variable_declaration_part (161)
    on left: 130 131, on right: 11 24 33
variable_declarations (162)
    on left: 132 133, on right: 131 133
variable_declaration (163)
    on left: 134, on right: 132 133
variable_declarator_list (164)
    on left: 135 137, on right: 134 137
@25 (165)
    on left: 136, on right: 137
variable_declarator (166)
    on left: 138, on right: 135 137
statement_part (167)
    on left: 139, on right: 11
compound_statement (168)
    on left: 141, on right: 139 185
$@26 (169)
    on left: 140, on right: 141
statement_sequence (170)
    on left: 142 143, on right: 24 33 141 143 219
statement (171)
    on left: 145 146, on right: 142 143 192 195 205 216 223
$@27 (172)
    on left: 144, on right: 145
optional_label (173)
    on left: 147 148, on right: 145 146
label (174)
    on left: 149, on right: 148
simple_statement (175)
    on left: 150 151 152 153, on right: 145
procedure_statement (176)
    on left: 155 157 159 161 163, on right: 152
$@28 (177)
    on left: 154, on right: 155
$@29 (178)
    on left: 156, on right: 157
$@30 (179)
    on left: 158, on right: 159
$@31 (180)
    on left: 160, on right: 161
$@32 (181)
    on left: 162, on right: 163
readln_parameter_list (182)
    on left: 164 165, on right: 157
read_parameter_list (183)
    on left: 167, on right: 155 165
$@33 (184)
    on left: 166, on right: 167
read_parameter_list1 (185)
    on left: 168 170, on right: 167 170
$@34 (186)
    on left: 169, on right: 170
read_parameter (187)
    on left: 171, on right: 168 170
writeln_parameter_list (188)
    on left: 172 173, on right: 161
write_parameter_list (189)
    on left: 175, on right: 159 173
$@35 (190)
    on left: 174, on right: 175
write_parameter_list1 (191)
    on left: 176 178, on right: 175 178
$@36 (192)
    on left: 177, on right: 178
write_expression (193)
    on left: 179 181, on right: 176 178
$@37 (194)
    on left: 180, on right: 181
output_width (195)
    on left: 182 184, on right: 181
$@38 (196)
    on left: 183, on right: 184
structured_statement (197)
    on left: 185 186 187, on right: 146
conditional_statement (198)
    on left: 188 189, on right: 186
if_statement (199)
    on left: 192, on right: 188
$@39 (200)
    on left: 190, on right: 192
$@40 (201)
    on left: 191, on right: 192
else_part (202)
    on left: 193 195, on right: 192
$@41 (203)
    on left: 194, on right: 195
case_statement (204)
    on left: 198, on right: 189
$@42 (205)
    on left: 196, on right: 198
$@43 (206)
    on left: 197, on right: 198
optional_semicolon (207)
    on left: 199 200, on right: 198
case_index (208)
    on left: 201, on right: 198
case_list_element_sequence (209)
    on left: 202 203, on right: 198 203
case_list_element (210)
    on left: 205, on right: 202 203
$@44 (211)
    on left: 204, on right: 205
case_constant_list (212)
    on left: 206 207, on right: 128 205 207
case_constant (213)
    on left: 209 210, on right: 206 207
$@45 (214)
    on left: 208, on right: 209
repetitive_statement (215)
    on left: 211 212 213, on right: 187
while_statement (216)
    on left: 216, on right: 212
$@46 (217)
    on left: 214, on right: 216
$@47 (218)
    on left: 215, on right: 216
repeat_statement (219)
    on left: 219, on right: 211
$@48 (220)
    on left: 217, on right: 219
$@49 (221)
    on left: 218, on right: 219
for_statement (222)
    on left: 223, on right: 213
$@50 (223)
    on left: 220, on right: 223
$@51 (224)
    on left: 221, on right: 223
$@52 (225)
    on left: 222, on right: 223
initial_value (226)
    on left: 224, on right: 223
final_value (227)
    on left: 225, on right: 223
to_or_downto (228)
    on left: 226 227, on right: 223
assignment_statement (229)
    on left: 230, on right: 151
$@53 (230)
    on left: 228, on right: 230
$@54 (231)
    on left: 229, on right: 230
goto_statement (232)
    on left: 231, on right: 153
assign (233)
    on left: 232, on right: 230
variable_access (234)
    on left: 233 234 235, on right: 171 230 236 243 245 284
buffer_variable (235)
    on left: 236, on right: 235
entire_variable (236)
    on left: 237, on right: 233
variable_identifier (237)
    on left: 238, on right: 237
component_variable (238)
    on left: 239 240, on right: 234
indexed_variable (239)
    on left: 242, on right: 239
@55 (240)
    on left: 241, on right: 242
array_variable (241)
    on left: 243, on right: 242
field_designator (242)
    on left: 244, on right: 240
record_variable (243)
    on left: 245, on right: 244
index_expression_list (244)
    on left: 246 248, on right: 242 248
$@56 (245)
    on left: 247, on right: 248
expression (246)
    on left: 249 251, on right: 179 181 182 184 201 216 219 224 225
    230 246 248 251 252 288 296
@57 (247)
    on left: 250, on right: 251
boolean_expression (248)
    on left: 252, on right: 192
relational_operator (249)
    on left: 253 254 255 256 257 258, on right: 251
simple_expression (250)
    on left: 259 261 262 264 266, on right: 249 251 264 266
$@58 (251)
    on left: 260, on right: 261
@59 (252)
    on left: 263, on right: 264
$@60 (253)
    on left: 265, on right: 266
adding_operator (254)
    on left: 267 268, on right: 264
term (255)
    on left: 269 271 273 275, on right: 259 261 262 264 266 271 273
    275
$@61 (256)
    on left: 270, on right: 271
@62 (257)
    on left: 272, on right: 273
$@63 (258)
    on left: 274, on right: 275
multiplying_operator (259)
    on left: 276 277 278, on right: 273
factor (260)
    on left: 279 280 281 282 283 284 286 288 290, on right: 269 271
    273 275 290
$@64 (261)
    on left: 285, on right: 286
$@65 (262)
    on left: 287, on right: 288
$@66 (263)
    on left: 289, on right: 290
optional_actual_parameter_list (264)
    on left: 291 292, on right: 163
actual_parameter_list (265)
    on left: 293 295, on right: 286 292 295
$@67 (266)
    on left: 294, on right: 295
actual_parameter (267)
    on left: 296, on right: 293 295


State 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program          go to state 2
    program_heading  go to state 3


State 1

    3 program_heading: PROGRAM . IDENTIFIER $@1 optional_program_parameters

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: program_heading . ';' program_block '.'

    ';'  shift, and go to state 6


State 4

    3 program_heading: PROGRAM IDENTIFIER . $@1 optional_program_parameters

    $default  reduce using rule 2 ($@1)

    $@1  go to state 7


State 5

    0 $accept: program $end .

    $default  accept


State 6

    1 program: program_heading ';' . program_block '.'

    $default  reduce using rule 6 ($@2)

    program_block  go to state 8
    $@2            go to state 9


State 7

    3 program_heading: PROGRAM IDENTIFIER $@1 . optional_program_parameters

    '('  shift, and go to state 10

    $default  reduce using rule 4 (optional_program_parameters)

    optional_program_parameters  go to state 11


State 8

    1 program: program_heading ';' program_block . '.'

    '.'  shift, and go to state 12


State 9

   11 program_block: $@2 . label_declaration_part $@3 constant_definition_part $@4 type_definition_part variable_declaration_part $@5 procedure_and_function_declaration_part $@6 statement_part

    LABEL  shift, and go to state 13

    $default  reduce using rule 47 (label_declaration_part)

    label_declaration_part  go to state 14


State 10

    5 optional_program_parameters: '(' . program_parameter_list ')'

    IDENTIFIER  shift, and go to state 15

    program_parameter_list  go to state 16
    program_parameter       go to state 17


State 11

    3 program_heading: PROGRAM IDENTIFIER $@1 optional_program_parameters .

    $default  reduce using rule 3 (program_heading)


State 12

    1 program: program_heading ';' program_block '.' .

    $default  reduce using rule 1 (program)


State 13

   48 label_declaration_part: LABEL . label_list ';'

    UNSIGNED_NUMBER  shift, and go to state 18

    label_list  go to state 19


State 14

   11 program_block: $@2 label_declaration_part . $@3 constant_definition_part $@4 type_definition_part variable_declaration_part $@5 procedure_and_function_declaration_part $@6 statement_part

    $default  reduce using rule 7 ($@3)

    $@3  go to state 20


State 15

   14 program_parameter: IDENTIFIER .

    $default  reduce using rule 14 (program_parameter)


State 16

    5 optional_program_parameters: '(' program_parameter_list . ')'
   13 program_parameter_list: program_parameter_list . ',' program_parameter

    ')'  shift, and go to state 21
    ','  shift, and go to state 22


State 17

   12 program_parameter_list: program_parameter .

    $default  reduce using rule 12 (program_parameter_list)


State 18

   49 label_list: UNSIGNED_NUMBER .

    $default  reduce using rule 49 (label_list)


State 19

   48 label_declaration_part: LABEL label_list . ';'
   50 label_list: label_list . ',' UNSIGNED_NUMBER

    ';'  shift, and go to state 23
    ','  shift, and go to state 24


State 20

   11 program_block: $@2 label_declaration_part $@3 . constant_definition_part $@4 type_definition_part variable_declaration_part $@5 procedure_and_function_declaration_part $@6 statement_part

    CONST  shift, and go to state 25

    $default  reduce using rule 51 (constant_definition_part)

    constant_definition_part  go to state 26


State 21

    5 optional_program_parameters: '(' program_parameter_list ')' .

    $default  reduce using rule 5 (optional_program_parameters)


State 22

   13 program_parameter_list: program_parameter_list ',' . program_parameter

    IDENTIFIER  shift, and go to state 15

    program_parameter  go to state 27


State 23

   48 label_declaration_part: LABEL label_list ';' .

    $default  reduce using rule 48 (label_declaration_part)


State 24

   50 label_list: label_list ',' . UNSIGNED_NUMBER

    UNSIGNED_NUMBER  shift, and go to state 28


State 25

   52 constant_definition_part: CONST . constant_definitions

    IDENTIFIER  shift, and go to state 29

    constant_definitions  go to state 30
    constant_definition   go to state 31


State 26

   11 program_block: $@2 label_declaration_part $@3 constant_definition_part . $@4 type_definition_part variable_declaration_part $@5 procedure_and_function_declaration_part $@6 statement_part

    $default  reduce using rule 8 ($@4)

    $@4  go to state 32


State 27

   13 program_parameter_list: program_parameter_list ',' program_parameter .

    $default  reduce using rule 13 (program_parameter_list)


State 28

   50 label_list: label_list ',' UNSIGNED_NUMBER .

    $default  reduce using rule 50 (label_list)


State 29

   56 constant_definition: IDENTIFIER . '=' $@16 constant ';'

    '='  shift, and go to state 33


State 30

   52 constant_definition_part: CONST constant_definitions .
   54 constant_definitions: constant_definitions . constant_definition

    IDENTIFIER  shift, and go to state 29

    $default  reduce using rule 52 (constant_definition_part)

    constant_definition  go to state 34


State 31

   53 constant_definitions: constant_definition .

    $default  reduce using rule 53 (constant_definitions)


State 32

   11 program_block: $@2 label_declaration_part $@3 constant_definition_part $@4 . type_definition_part variable_declaration_part $@5 procedure_and_function_declaration_part $@6 statement_part

    TYPE  shift, and go to state 35

    $default  reduce using rule 78 (type_definition_part)

    type_definition_part  go to state 36


State 33

   56 constant_definition: IDENTIFIER '=' . $@16 constant ';'

    $default  reduce using rule 55 ($@16)

    $@16  go to state 37


State 34

   54 constant_definitions: constant_definitions constant_definition .

    $default  reduce using rule 54 (constant_definitions)


State 35

   79 type_definition_part: TYPE . type_definitions

    IDENTIFIER  shift, and go to state 38

    type_definitions  go to state 39
    type_definition   go to state 40


State 36

   11 program_block: $@2 label_declaration_part $@3 constant_definition_part $@4 type_definition_part . variable_declaration_part $@5 procedure_and_function_declaration_part $@6 statement_part

    VAR  shift, and go to state 41

    $default  reduce using rule 130 (variable_declaration_part)

    variable_declaration_part  go to state 42


State 37

   56 constant_definition: IDENTIFIER '=' $@16 . constant ';'

    CHARACTER_STRING    shift, and go to state 43
    CHARACTER_CONSTANT  shift, and go to state 44
    UNSIGNED_NUMBER     shift, and go to state 45
    REAL_CONSTANT       shift, and go to state 46
    LONG_REAL_CONSTANT  shift, and go to state 47
    IDENTIFIER          shift, and go to state 48
    '+'                 shift, and go to state 49
    '-'                 shift, and go to state 50

    constant  go to state 51


State 38

   83 type_definition: IDENTIFIER . '=' $@17 type_denoter ';'

    '='  shift, and go to state 52


State 39

   79 type_definition_part: TYPE type_definitions .
   81 type_definitions: type_definitions . type_definition

    IDENTIFIER  shift, and go to state 38

    $default  reduce using rule 79 (type_definition_part)

    type_definition  go to state 53


State 40

   80 type_definitions: type_definition .

    $default  reduce using rule 80 (type_definitions)


State 41

  131 variable_declaration_part: VAR . variable_declarations

    IDENTIFIER  shift, and go to state 54

    variable_declarations     go to state 55
    variable_declaration      go to state 56
    variable_declarator_list  go to state 57
    variable_declarator       go to state 58


State 42

   11 program_block: $@2 label_declaration_part $@3 constant_definition_part $@4 type_definition_part variable_declaration_part . $@5 procedure_and_function_declaration_part $@6 statement_part

    $default  reduce using rule 9 ($@5)

    $@5  go to state 59


State 43

   69 constant: CHARACTER_STRING .

    $default  reduce using rule 69 (constant)


State 44

   70 constant: CHARACTER_CONSTANT .

    $default  reduce using rule 70 (constant)


State 45

   63 constant: UNSIGNED_NUMBER .

    $default  reduce using rule 63 (constant)


State 46

   57 constant: REAL_CONSTANT .

    $default  reduce using rule 57 (constant)


State 47

   60 constant: LONG_REAL_CONSTANT .

    $default  reduce using rule 60 (constant)


State 48

   66 constant: IDENTIFIER .

    $default  reduce using rule 66 (constant)


State 49

   58 constant: '+' . REAL_CONSTANT
   61         | '+' . LONG_REAL_CONSTANT
   64         | '+' . UNSIGNED_NUMBER
   67         | '+' . IDENTIFIER

    UNSIGNED_NUMBER     shift, and go to state 60
    REAL_CONSTANT       shift, and go to state 61
    LONG_REAL_CONSTANT  shift, and go to state 62
    IDENTIFIER          shift, and go to state 63


State 50

   59 constant: '-' . REAL_CONSTANT
   62         | '-' . LONG_REAL_CONSTANT
   65         | '-' . UNSIGNED_NUMBER
   68         | '-' . IDENTIFIER
